Should save and read in user library info now